--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-route": "~1.3.15",
     "angular-sanitize": "~1.3.15",
     "angular-translate": "~2.7.0",
+    "iso-currency": "0.1.5",
     "leaflet.markercluster": "v0.4.0-hotfix.1",
     "Leaflet.awesome-markers": "*",
     "leaflet": "~0.7.3",
