Migrated to bootstrap, themed bootstrap
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/bower.json
+++ b/bower.json
@@ -29,5 +29,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "resolutions": {
+    "angular-translate": "~2.7.0",
+    "angular-bootstrap": "~0.13.0"
+  }
 }
