Changed base_url for to playground.matemonkey.com
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/js/config/api.yaml
+++ b/app/js/config/api.yaml
@@ -1,5 +1,5 @@
 development:
-  base_url: http://127.0.0.1:3000
+  base_url: http://playground.matemonkey.com
 
 production:
   base_url: http://matemonkey.com
