--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "Maximilian Güntner <maximilian.guentner@gmail.com>"
   ],
   "description": "Angular Frontend for matemonkey.com",
-  "license": "LGPL",
+  "license": "GPL",
   "homepage": "matemonkey.com",
   "ignore": [
     "**/.*",
@@ -32,6 +32,7 @@
   ],
   "resolutions": {
     "angular-translate": "~2.7.0",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "angular": "1.3.15"
   }
 }
