Added "Recent Changes" View/Controller
maybe not final, so currently no link in the navbar ;)

Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "Leaflet.awesome-markers": "*",
     "leaflet": "~0.7.3",
     "bootstrap": "*",
-    "angular-media-queries": "~0.4.0"
+    "angular-media-queries": "~0.4.0",
+    "ngInfiniteScroll": "~1.2.1"
   },
   "authors": [
     "Maximilian Güntner <maximilian.guentner@gmail.com>"
