--- a/bower.json
+++ b/bower.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "main": "public/app.js",
   "dependencies": {
-    "angular-bootstrap": "~0.13.0",
+    "angular-bootstrap": "~0.14.0",
     "angular-dialog-service": "~5.2.6",
-    "angular-leaflet-directive": "~0.7.15",
+    "angular-leaflet-directive": "~0.8.8",
     "angular-relative-date": "~1.0.0",
     "angular-route": "~1.3.15",
     "angular-sanitize": "~1.3.15",
@@ -33,7 +33,7 @@
   ],
   "resolutions": {
     "angular-translate": "~2.7.0",
-    "angular-bootstrap": "~0.13.0",
-    "angular": "1.3.15"
+    "angular-bootstrap": "~0.14.0",
+    "angular": ">=1.2.26 <=1.5"
   }
 }
