added FontAwesome. Site is a bit more responsive now
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "leaflet": "~0.7.3",
     "bootstrap": "*",
     "angular-media-queries": "~0.4.0",
+    "components-font-awesome": "*",
     "ngInfiniteScroll": "~1.2.1"
   },
   "authors": [
