--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngMateMonkey",
+  "name": "ng-matemonkey",
   "description": "The AngularJS Frontend for matemonkey.com",
   "author": "Maximilian Güntner",
   "version": "0.0.1",
