--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "test": "brunch test"
   },
   "dependencies": {
-    "auto-reload-brunch": "^2.7.1",
-    "bower": "^1.8.0",
-    "brunch": "^2.10.5",
-    "clean-css-brunch": "^2.0.0",
-    "constangular-brunch": "^0.1.4",
-    "css-brunch": "^2.6.1",
-    "javascript-brunch": "^2.0.0",
-    "less-brunch": "^2.7.1",
-    "uglify-js-brunch": "^2.0.1"
+    "auto-reload-brunch": "2.7.1",
+    "bower": "1.8.0",
+    "brunch": "2.10.5",
+    "clean-css-brunch": "2.0.0",
+    "constangular-brunch": "0.1.4",
+    "javascript-brunch": "2.0.0",
+    "less-brunch": "2.10.0",
+    "uglify-js-brunch": "2.0.1"
   }
 }
